--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <div id="app"></div>
+        <div id="dashboard">
+        </div>
         <div id="game-canvas"></div>
         <script src="index.js"></script>
-        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=ABeeZee&family=Fredoka+One&display=swap" rel="stylesheet"> 
     </body>
 </html>
